--- a/cluster1/Vagrantfile
+++ b/cluster1/Vagrantfile
@@ -5,6 +5,11 @@ POD_NW_CIDR = "10.244.0.0/16"
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
+  config.vm.provider :libvirt do |v, override|
+    override.vm.box = "generic/ubuntu1804"
+    config.vm.synced_folder ".", "/vagrant", type: "rsync", disabled: false
+  end
+
   config.vm.box_check_update = false
 
   config.vm.define "cluster1-master1" do |node|
@@ -20,6 +25,11 @@ Vagrant.configure("2") do |config|
         ]
     end
 
+    node.vm.provider :libvirt do |libvirt|
+        libvirt.memory = 2048
+        libvirt.cpus = 2
+    end
+
     node.vm.hostname = "cluster1-master1"
     node.vm.network :private_network, ip: IP_MASTER1
 
@@ -27,7 +37,7 @@ Vagrant.configure("2") do |config|
       s.args = ["enp0s8"]
     end
 
-    node.vm.provision 'shell', inline: "cat /vagrant/certs/id_rsa.pub >> /root/.ssh/authorized_keys"
+    node.vm.provision 'shell', inline: "mkdir -p /root/.ssh && cat /vagrant/certs/id_rsa.pub >> /root/.ssh/authorized_keys"
     node.vm.provision "update-dns", type: "shell", :path => "scripts/update-dns.sh"
     node.vm.provision "install-kube", type: "shell", :path => "scripts/install-kube.sh"
     node.vm.provision "install-master", type: "shell", :path => "scripts/install-master.sh", env: {"MASTER_IP" => "#{IP_MASTER1}", "POD_NW_CIDR" => "#{POD_NW_CIDR}"}
@@ -47,6 +57,11 @@ Vagrant.configure("2") do |config|
             ]
         end
 
+        node.vm.provider :libvirt do |libvirt|
+            libvirt.memory = 2048
+            libvirt.cpus = 2
+        end
+
         node.vm.hostname = "cluster1-worker1"
         node.vm.network :private_network, ip: IP_WORKER1
 
@@ -54,7 +69,7 @@ Vagrant.configure("2") do |config|
           s.args = ["enp0s8"]
         end
 
-        node.vm.provision 'shell', inline: "cat /vagrant/certs/id_rsa.pub >> /root/.ssh/authorized_keys"
+        node.vm.provision 'shell', inline: "mkdir -p /root/.ssh && cat /vagrant/certs/id_rsa.pub >> /root/.ssh/authorized_keys"
         node.vm.provision "update-dns", type: "shell", :path => "scripts/update-dns.sh"
         node.vm.provision "install-kube", type: "shell", :path => "scripts/install-kube.sh"
         node.vm.provision "install-worker", type: "shell", :path => "scripts/install-worker.sh", env: {"MASTER_IP" => "#{IP_MASTER1}"}
